2015-10-10  Alex Harsanyi  <AlexHarsanyi@gmail.com>

	* soap-client.el (soap-type-is-array?): new defun
	(soap-encode-xs-element): handle array elements in this function
	(soap-encode-xs-complex-type): flag error if asked to encode an
	array type, this is handled in `soap-encode-xs-element'

2015-09-26  Thomas Fitzsimmons  <fitzsim@fitzsim.org>

	* soap-inspect.el (soap-inspect-xs-attribute-group): Do not print
	type for attribute group.

2015-09-26  Thomas Fitzsimmons  <fitzsim@fitzsim.org>

	* soap-inspect.el (soap-sample-value-for-xs-attribute-group): New
	function.
	(soap-inspect-xs-attribute-group): Likewise.

2015-09-26  Thomas Fitzsimmons  <fitzsim@fitzsim.org>

	* soap-inspect.el
	(soap-resolve-references-for-xs-attribute-group): Resolve
	references of attributes in an attribute group.

2015-09-26  Thomas Fitzsimmons  <fitzsim@fitzsim.org>

	* soap-client.el (soap-decode-xs-attributes): Process attribute
	type directly, not through soap-wsdl-get.

2015-09-26  Thomas Fitzsimmons  <fitzsim@fitzsim.org>

	* soap-client.el (soap-xs-parse-attribute): Leave reference nil if
	reference attribute is nil.

2015-09-26  Thomas Fitzsimmons  <fitzsim@fitzsim.org>

	* soap-client.el (soap-resolve-references-for-xs-attribute):
	Convert XML schema attributes to xsd:string.

2015-09-25  Thomas Fitzsimmons  <fitzsim@fitzsim.org>

	* soap-inspect.el (soap-sample-value-for-xs-attribute): New
	function.
	(soap-sample-value-for-xs-simple-type): Prepend attributes to
	result.
	(soap-sample-value-for-xs-complex-type): Likewise.
	(soap-inspect-xs-attribute): New function.
	(soap-inspect-xs-simple-type): Print attributes.
	(soap-inspect-xs-complex-type): Likewise.

2015-09-25  Thomas Fitzsimmons  <fitzsim@fitzsim.org>

	* soap-inspect.el (soap-resolve-references-for-xs-simple-type):
	Resolve references for attributes.
	(soap-resolve-references-for-xs-complex-type): Likewise.

2015-04-07  Thomas Fitzsimmons  <fitzsim@fitzsim.org>
